<resources>
    <string name="app_name">Fantasy</string>

    <!-- Company description -->
    <string name="company_descr">Our fantasy shop is open every day and welcomes you to find
        award-winning games, gaming and movie collectibles etc.\n\nAlso, don’t forget to drop by and take a seat at our tables, have a cup of coffee and play our games, old and new!\n\nFor
        further information regarding our wares, our competitions and gaming campaigns,
        take a look at our website or visit us at our shop!</string>

    <!-- Company details -->
    <string name="company_title">RollDice.gr</string>
    <string name="website">www.rolldice.gr</string>
    <string name="phone">210 6125445</string>
    <string name="email">play@rolldice.gr</string>
    <string name="address">5 str. Attalou, 151 23, Maroussi</string>
    <string name="opening"> 10am to 11pm every day except Monday.</string>

    <!-- Various -->
    <string name="copyrightText">Copyright 2017</string>
</resources>
