<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              tools:context="com.example.android.fantasy.MainActivity"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/colorPrimary"
        android:src="@drawable/d20"
        android:padding="@dimen/padding_image"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/dragon"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/titleText"
                android:text="@string/company_title"
                android:id="@+id/textView"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_Main_Text">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/mainText"
                    android:text="@string/company_descr"/>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/width_height_Divider"
                    style="@style/vertical"
                    android:layout_below="@id/description"></View>

                <ImageView
                    android:id="@+id/opening_icon"
                    android:layout_width="@dimen/widthHeight_Icon"
                    android:layout_height="@dimen/widthHeight_Icon"
                    android:src="@drawable/ic_access_time_black_24dp"
                    android:layout_marginRight="@dimen/marginRight_Icon"
                    android:layout_below="@id/divider"/>

                <TextView
                    android:id="@+id/opening"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/description"
                    android:text="@string/opening"
                    android:layout_toRightOf="@id/opening_icon"
                    android:layout_alignTop="@id/opening_icon"
                    android:textColor="@color/mainTextColor"/>

                <ImageView
                    android:id="@+id/phone_icon"
                    android:layout_width="@dimen/widthHeight_Icon"
                    android:layout_height="@dimen/widthHeight_Icon"
                    android:src="@drawable/ic_call_black_24dp"
                    android:layout_marginRight="@dimen/marginRight_Icon"
                    android:layout_marginTop="@dimen/marginTop_Icon"
                    android:layout_below="@id/opening"/>

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:layout_below="@id/opening"
                    android:layout_toRightOf="@id/phone_icon"
                    android:layout_alignTop="@id/phone_icon"
                    android:textColor="@color/mainTextColor"/>

                <ImageView
                    android:id="@+id/website_icon"
                    android:layout_width="@dimen/widthHeight_Icon"
                    android:layout_height="@dimen/widthHeight_Icon"
                    android:src="@drawable/ic_language_black_24dp"
                    android:layout_marginTop="@dimen/marginTop_Icon"
                    android:layout_marginRight="@dimen/marginRight_Icon"
                    android:layout_below="@id/phone_icon"/>

                <TextView
                    android:id="@+id/website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/phone"
                    android:text="@string/website"
                    android:layout_toRightOf="@id/website_icon"
                    android:layout_alignTop="@id/website_icon"
                    android:textColor="@color/mainTextColor"/>

                <ImageView
                    android:id="@+id/email_icon"
                    android:layout_width="@dimen/widthHeight_Icon"
                    android:layout_height="@dimen/widthHeight_Icon"
                    android:src="@drawable/ic_email_black_24dp"
                    android:layout_marginTop="@dimen/marginTop_Icon"
                    android:layout_marginRight="@dimen/marginRight_Icon"
                    android:layout_below="@id/website_icon"/>

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/website"
                    android:text="@string/email"
                    android:layout_toRightOf="@id/email_icon"
                    android:layout_alignTop="@id/email_icon"
                    android:textColor="@color/mainTextColor"/>


                <ImageView
                    android:id="@+id/address_icon"
                    android:layout_width="@dimen/widthHeight_Icon"
                    android:layout_height="@dimen/widthHeight_Icon"
                    android:src="@drawable/ic_place_black_24dp"
                    android:layout_marginTop="@dimen/marginTop_Icon"
                    android:layout_marginRight="@dimen/marginRight_Icon"
                    android:layout_below="@id/email_icon"/>

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/email"
                    android:text="@string/address"
                    android:layout_toRightOf="@id/address_icon"
                    android:layout_alignTop="@id/address_icon"
                    android:textColor="@color/mainTextColor"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/copyrightText"
        android:text="@string/copyrightText"/>

</LinearLayout>